# bolierplate-python-essential

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.project_slug}}/: .project-env-setting.sh  pyproject.toml
