[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Seunggwan Song <yanhis97531@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pre-commit = "^3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
